@@ -67,6 +67,7 @@ Template for new versions:
 - ``Buildings::containsTile``: fix result for buildings that are solid and have no extent structures
 - Mortal mode: prevent keybindings that run armok tools from being recognized when in mortal mode
 - `dig`: don't leave phantom dig designations behind when autodigging warm/damp designated tiles
+- `buildingplan`: properly identify appropriate thread-based construction items for modded buildings built from thread
 
 ## Misc Improvements
 - `blueprint`: capture track carving designations in addition to already-carved tracks
